# qt4_face_rec

./: CMakeLists.txt  README
face_rec_lib/: CMakeLists.txt  classifier.cpp  classifier.h  config.h.in  face_align.cpp  face_align.h  face_feature.cpp  face_feature.h  face_repository.cpp  face_repository.h
face_rec_lib/tools/: align_face_images.cpp
gui/: imageviewer.cpp  imageviewer.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwindow.cpp  mainwindow.h
models/cnn/: LightenedCNN_B_deploy.prototxt  LightenedCNN_B_mean.binaryproto
src/: camera.cpp  camera.h  face_processor.cpp  face_processor.h  face_repo_utils.cpp  face_repo_utils.h  main.cpp  settings.h
